@@ -1,3 +1,10 @@
+1999-09-01  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* configure.in (ac_cv_struct_sigaction_has_sa_sigaction):
+	* acconfig.h: Ditto
+	* parseutil/dcfd.c (main): Use it.
+ 	From: HOSAKA Eiichi <HOSAKA.Eiichi@dd.anritsu.co.jp>
+
 1999-08-29  Harlan Stenn  <stenn@whimsy.udel.edu>
 
 	* configure.in: 4.0.97d
